@@ -1,3 +1,10 @@
+2006-11-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	* flumotion/component/dvb/dvb.xml:
+	Add option to get a transport stream from file.
+	This requires dvb-type property set to FILE.
+
 2006-10-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
